build: apply the badass runtime plugin again to build native installers and distributions with a bundled runtime