@@ -2,6 +2,7 @@ plugins {
     id 'org.ajoberstar.reckon' version '0.16.1'
     id 'java'
     id 'application'
+    id 'org.beryx.runtime' version '1.12.7'
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
     id 'org.asciidoctor.jvm.pdf' version '3.3.2'
 }
@@ -21,7 +22,7 @@ mainClassName = "ch.admin.bar.siardsuite.Launcher"
 
 manifest {
     attributes(
-            'Implementation-Version': version
+            'Implementation-Version': project.version
     )
 }
 
@@ -42,6 +43,9 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+tasks.withType(JavaExec) {
+    jvmArgs("--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED", "--add-opens=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED", "--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED")
+}
 
 // task to create an exectutable jar file with all necessary dependencies included and signature files removed.
 task fatJar(type: Jar) {
@@ -54,6 +58,45 @@ task fatJar(type: Jar) {
         exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
     }
     with jar
+}
+
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    launcher {
+        noConsole = true
+    }
+
+    additive = true
+    modules = [
+            'java.logging',
+            'java.sql',
+            'java.management',
+            'java.naming'
+    ]
+
+    jpackage {
+        appVersion = project.version
+
+        skipInstaller = false
+
+        def currentOs = org.gradle.internal.os.OperatingSystem.current()
+        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
+        //imageOptions += ['--icon', "src/main/resources/hellofx.$imgType"]
+        imageOptions += ['--icon', "src/main/resources/ch/admin/bar/siardsuite/icons/archive.png"]
+
+        installerOptions += ['--resource-dir', "src/main/resources"]
+        installerOptions += ['--vendor', 'BUAR']
+
+        if (currentOs.windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        } else if (currentOs.linux) {
+            installerType = "deb"
+            installerOptions += ['--linux-package-name', 'siard-suite', '--linux-shortcut']
+        } else if (currentOs.macOsX) {
+            installerOptions += ['--mac-package-name', 'siard-suite']
+        }
+    }
 }
 
 test {
